# libwebp-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrap.h  wrapper.h
.github/workflows/: CI.yml
src/: ffi.rs  lib.rs
tests/: test1_1000x1000.bif
